# piano

./: CMakeLists.txt  Toolchain-aarch64.cmake  run.sh
src/: main.cpp
test/: get_pix_of_image.py
